--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ html {
   padding: 0;
   -webkit-box-sizing: inherit;
           box-sizing: inherit;
-  font-size: 10px;
+  font-size: 12px;
   color: #111517;
 }
 
@@ -256,6 +256,9 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   margin-top: 3.25rem;
   background-color: white;
   border: 0;
@@ -268,7 +271,8 @@ body {
 }
 
 .detail-page .back-btn .fa-long-arrow-alt-left {
-  scale: 1.5;
+  -webkit-transform: scale(1.5);
+          transform: scale(1.5);
   margin-right: 1rem;
 }
 
@@ -378,6 +382,7 @@ body {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+    gap: 2rem;
   }
   .detail-page {
     padding: 0 7rem;
