--- a/style.scss
+++ b/style.scss
@@ -29,7 +29,7 @@ html {
     margin: 0;
     padding: 0;
     box-sizing: inherit;
-    font-size: 10px;
+    font-size: 12px;
     color: $darkest-blue;
 }
 
@@ -196,6 +196,7 @@ body {
     .back-btn {
         display: flex;
         align-items: center;
+        justify-content: center;
         margin-top: 3.25rem;
         background-color: white;
         border: 0;
@@ -205,7 +206,7 @@ body {
         font-weight: 200;
         cursor: pointer;
         .fa-long-arrow-alt-left {
-            scale: 1.5;
+            transform: scale(1.5);
             margin-right: 1rem;
         }
     }
@@ -282,6 +283,7 @@ body {
         grid-template-columns: 1fr 1fr;
         justify-content: center;
         align-items: center;
+        gap: 2rem;
     }
     .detail-page {
         padding: 0 7rem;
