--- a/style.scss
+++ b/style.scss
@@ -133,7 +133,7 @@ body {
 }
 
 .countries-center {
-    padding: 0 5rem;
+    margin: 0 3.5rem;
 }
 
 .countries {
@@ -276,6 +276,10 @@ body {
         flex-direction: row;
         align-items: center;
         justify-content: space-between;
+    }
+
+    .countries-center {
+        margin: 0 5rem;
     }
     .detail-flex {
         margin-top: 5rem;
