--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@ html {
   font-size: 12px;
 }
 
+*:focus-visible {
+  outline: none;
+}
+
 body {
   color: #111517;
   font-family: 'Nunito Sans';
